# dacquoise

./: Cargo.toml  README.md  requirements.txt
.github/workflows/: build.yml
python/: render.py
src/: lib.rs  main.rs
src/core/: bsdf.rs  bvh.rs  computation_node.rs  emitter.rs  integrator.rs  interaction.rs  medium.rs  mod.rs  rng.rs  scene.rs  scene_loader.rs  sensor.rs  shape.rs  tangent_frame.rs  texture.rs  volume.rs
src/emitters/: area.rs  directional.rs  envmap.rs  mod.rs
src/integrators/: mod.rs  path.rs  raymarching.rs
src/io/: exr_utils.rs  exrutils.rs  mod.rs  obj_utils.rs
src/materials/: blend.rs  bsdf.rs  lambertian_diffuse.rs  microfacet.rs  mod.rs  null.rs  roughconductor.rs  roughdielectric.rs
src/math/: aabb.rs  bitmap.rs  constants.rs  frame.rs  mod.rs  ray.rs  spectrum.rs  transform.rs  warp.rs
src/media/: heterogeneous.rs  heterogeneous_medium.rs  homogeneous_medium.rs  mod.rs
src/renderers/: mod.rs  renderer.rs  simple.rs
src/sensors/: perspective.rs
src/shapes/: cube.rs  mod.rs  rectangle.rs  shape.rs  triangle.rs  triangle_mesh.rs
src/textures/: constant.rs  image.rs  mod.rs
src/volumes/: const_volume.rs  constant.rs  grid.rs  grid_volume.rs  mod.rs
