# Copyright @yucwang 2023

[package]
name = "dacquoise"
version = "0.1.0"
authors = ["TwoCookingMice <wyc8094@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7.0"
log = "0.4"
nalgebra = "0.21.1"
exr  = "1.5.3"
wavefront_obj = "11.0.0"

[profile.release]
lto = true
