# Copyright @yucwang 2023

[package]
name = "dacquoise"
version = "0.1.0"
authors = ["TwoCookingMice <wyc8094@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dacquoise"
crate-type = ["cdylib", "rlib"]

[dependencies]
env_logger = "0.7.0"
log = "0.4"
nalgebra = "0.31.4"
exr  = "1.5.3"
wavefront_obj = "11.0.0"
quick-xml = "0.31.0"
image = "0.24.7"
indicatif = "0.17.8"
ply-rs-bw = "2.0.2"
console = "0.15.11"
pyo3 = { version = "0.16.6", optional = true, features = ["extension-module"] }
nalgebra-py = { version = "0.3.1", optional = true }

[features]
python = ["dep:pyo3", "dep:nalgebra-py"]

[profile.release]
lto = true
